Nearly finished Java 17 migration.
Migrated to java.nio.Path, removed most commons-io usage, updated dependencies.

Refs #158.